--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,8 @@
         "overtrue/phplint": "^1.2",
         "friendsofphp/php-cs-fixer": "^2.16",
         "squizlabs/php_codesniffer": "^3.5"
+    },
+    "require": {
+        "doctrine/annotations": "^1.8"
     }
 }
