--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "squizlabs/php_codesniffer": "^3.5"
     },
     "require": {
-        "doctrine/annotations": "^1.8"
+        "doctrine/annotations": "^1.8",
+        "beberlei/assert": "^3.2"
     },
    "autoload": {
         "psr-4": {
