--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,23 @@
 {
-    "require-dev": {
-        "phpunit/phpunit": "^8.5",
-        "overtrue/phplint": "^1.2",
-        "friendsofphp/php-cs-fixer": "^2.16",
-        "squizlabs/php_codesniffer": "^3.5"
-    },
-    "require": {
-        "doctrine/annotations": "^1.8",
-        "beberlei/assert": "^3.2"
-    },
-    "autoload": {
-        "psr-4": { "Bungle\\FrameworkBundle\\": "" },
-        "exclude-from-classmap": [
-            "/Tests/"
-        ]
-    }
+  "name": "bungle/framework-bundle",
+  "description": "Bungle framework Bundle",
+  "type": "symfony-bundle",
+  "license": "MIT",
+  "require-dev": {
+    "phpunit/phpunit": "^8.5",
+    "overtrue/phplint": "^1.2",
+    "friendsofphp/php-cs-fixer": "^2.16",
+    "squizlabs/php_codesniffer": "^3.5"
+  },
+  "require": {
+    "doctrine/annotations": "^1.8",
+    "beberlei/assert": "^3.2"
+  },
+  "autoload": {
+    "psr-4": { "Bungle\\FrameworkBundle\\": "" },
+    "exclude-from-classmap": [
+      "/Tests/"
+    ]
+  }
 }
+
