--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
   },
   "require": {
     "doctrine/annotations": "^1.8",
-    "beberlei/assert": "^3.2"
+    "beberlei/assert": "^3.2",
+    "symfony/dependency-injection": "^5.0",
+    "symfony/config": "^5.0"
   },
   "autoload": {
     "psr-4": { "Bungle\\FrameworkBundle\\": "" },
@@ -20,4 +22,3 @@
     ]
   }
 }
-
