--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "beberlei/assert": "^3.2",
     "symfony/dependency-injection": "^5.0",
     "symfony/config": "^5.0",
-    "symfony/workflow": "^5.0"
+    "symfony/workflow": "^5.0",
+    "symfony/security-core": "^5.0"
   },
   "autoload": {
     "psr-4": { "Bungle\\FrameworkBundle\\": "" },
