Rename bungle.entity_discover service name
To allow override SimpleEntityDiscover to use other implementation
classes.

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -1,18 +1,17 @@
 services:
-  bungle.framework.simple_entity_discover:
+  bungle.entity_discover:
     class: Bungle\FrameworkBundle\Meta\SimpleEntityDiscover
-    public: false
     arguments: [[]]
 
   bungle.framework.logic_name:
     class: Bungle\FrameworkBundle\Meta\LogicName
     # By default use a empty EntityDiscover, use DoctrineBungleBridgeBundle to override
-    arguments: ["@bungle.framework.simple_entity_discover"]
+    arguments: ["@bungle.entity_discover"]
 
   bungle.framework.high_prefix:
     class: Bungle\FrameworkBundle\Meta\HighPrefix
     # By default use a empty EntityDiscover, use DoctrineBungleBridgeBundle to override
-    arguments: ["@bungle.framework.simple_entity_discover"]
+    arguments: ["@bungle.entity_discover"]
 
   Bungle\FrameworkBundle\Meta\LogicName: '@bungle.framework.logic_name'
   Bungle\FrameworkBundle\Meta\HighPrefix: '@bungle.framework.high_prefix'
