--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "symfony/dependency-injection": "^5.0",
     "symfony/config": "^5.0",
     "symfony/workflow": "^5.0",
-    "symfony/security-core": "^5.0"
+    "symfony/security-core": "^5.0",
+    "doctrine/mongodb-odm-bundle": "^4.1"
   },
   "autoload": {
     "psr-4": { "Bungle\\FrameworkBundle\\": "" },
