--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -4,8 +4,8 @@ services:
     arguments: ["@doctrine_mongodb"]
 
   bungle.entity.meta_resolver:
-    class: Bungle\FrameworkBundle\Entity\ArrayEntityMetaResolver
-    arguments: [[]]
+    class: Bungle\FrameworkBundle\Entity\EntityMetaResolver
+    arguments: ["@Doctrine\\ODM\\MongoDB\\DocumentManager"]
 
   bungle.entity.meta_repository:
     class: Bungle\FrameworkBundle\Entity\EntityMetaRepository
