--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "require-dev": {
     "phpunit/phpunit": "^8.5",
-    "overtrue/phplint": "^1.2",
     "friendsofphp/php-cs-fixer": "^2.16",
-    "squizlabs/php_codesniffer": "^3.5"
+    "squizlabs/php_codesniffer": "^3.5",
+    "phpmd/phpmd": "^2.8"
   },
   "require": {
     "doctrine/annotations": "^1.8",
@@ -16,7 +16,8 @@
     "symfony/config": "^5.0",
     "symfony/workflow": "^5.0",
     "symfony/security-core": "^5.0",
-    "doctrine/mongodb-odm-bundle": "^4.1"
+    "doctrine/mongodb-odm-bundle": "^4.1",
+    "symfony/yaml": "^5.0"
   },
   "autoload": {
     "psr-4": { "Bungle\\FrameworkBundle\\": "" },
