--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
     "symfony/workflow": "^5.0",
     "symfony/security-bundle": "^5.0",
     "doctrine/mongodb-odm-bundle": "^4.1",
-    "symfony/yaml": "^5.0"
+    "symfony/yaml": "^5.0",
+    "symfony/form": "^5.0",
+    "symfony/validator": "^5.0"
   },
   "autoload": {
     "psr-4": {
