--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "doctrine/mongodb-odm-bundle": "^4.1",
     "symfony/yaml": "^5.0",
     "symfony/form": "^5.0",
-    "symfony/validator": "^5.0"
+    "symfony/validator": "^5.0",
+    "twig/twig": "^3.0"
   },
   "autoload": {
     "psr-4": {
