--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "phpunit/phpunit": "^8.5",
     "friendsofphp/php-cs-fixer": "^2.16",
     "squizlabs/php_codesniffer": "^3.5",
-    "phpmd/phpmd": "^2.8"
+    "phpmd/phpmd": "^2.8",
+    "mockery/mockery": "^1.3"
   },
   "require": {
     "doctrine/annotations": "^1.8",
