--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,17 @@
     "symfony/yaml": "^5.0",
     "symfony/form": "^5.0",
     "symfony/validator": "^5.0",
-    "twig/twig": "^3.0"
+    "twig/twig": "^3.0",
+    "mingyoung/dingtalk": "^2.3",
+    "symfony/serializer": "^5.0",
+    "symfony/property-info": "^5.0",
+    "symfony/property-access": "^5.0"
   },
   "autoload": {
     "psr-4": {
       "Bungle\\Framework\\": "Framework/src/",
-      "Bungle\\FrameworkBundle\\": "BungleBundle/src/"
+      "Bungle\\FrameworkBundle\\": "BungleBundle/src/",
+      "Bungle\\DingTalk\\": "DingTalk/src/"
     },
     "exclude-from-classmap": [
       "*/tests/"
@@ -35,7 +40,8 @@
   "autoload-dev": {
     "psr-4": {
       "Bungle\\Framework\\Tests\\": "Framework/tests/",
-      "Bungle\\FrameworkBundle\\Tests\\": "BungleBundle/tests/"
+      "Bungle\\FrameworkBundle\\Tests\\": "BungleBundle/tests/",
+      "Bungle\\DingTalk\\Tests\\": "DingTalk/tests/"
     }
   }
 
