--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
     "mingyoung/dingtalk": "^2.3",
     "symfony/serializer": "^5.0",
     "symfony/property-info": "^5.0",
-    "symfony/property-access": "^5.0",
-    "lstrojny/functional-php": "^1.11"
+    "symfony/property-access": "^5.0"
   },
   "autoload": {
     "psr-4": {
