--- a/BungleBundle/Resources/config/services.yaml
+++ b/BungleBundle/Resources/config/services.yaml
@@ -45,7 +45,7 @@ services:
   bungle.workflow.vina:
     public: false
     class: Bungle\Framework\StateMachine\Vina
-    arguments: ["@workflow.registry", "@security.authorization_checker", "@request_stack", "@event_dispatcher", "@bungle.workflow.odm_synctodb"]
+    arguments: ["@workflow.registry", "@security.authorization_checker", "@request_stack", "@bungle.state_machine.stt_locator", "@bungle.workflow.odm_synctodb"]
 
   Bungle\Framework\StateMachine\Vina: '@bungle.workflow.vina'
 
