--- a/BungleBundle/Resources/config/services.yaml
+++ b/BungleBundle/Resources/config/services.yaml
@@ -85,21 +85,21 @@ services:
     tags: ['security.voter']
 
   bungle.id_name.code_translator:
-    class: Bungle\Framework\IDName\CodeAbleHighIDNameTranslator
+    class: Bungle\Framework\Ent\IDName\CodeAbleHighIDNameTranslator
     arguments: ["@Doctrine\\ODM\\MongoDB\\DocumentManager"]
     tags:
       - { name: 'bungle.idName', priority: -2 }
 
   bungle.id_name.name_translator:
-    class: Bungle\Framework\IDName\NameAbleHighIDNameTranslator
+    class: Bungle\Framework\Ent\IDName\NameAbleHighIDNameTranslator
     arguments: ["@Doctrine\\ODM\\MongoDB\\DocumentManager"]
     tags:
       - { name: 'bungle.idName', priority: -1 }
 
   bungle.id_name.chain_translator:
-    class: Bungle\Framework\IDName\HighIDNameTranslatorChain
+    class: Bungle\Framework\Ent\IDName\HighIDNameTranslatorChain
     arguments: ["@bungle.entity.registry"]
 
-  Bungle\Framework\IDName\HighIDNameTranslator:
-    class: Bungle\Framework\IDName\HighIDNameTranslator
+  Bungle\Framework\Ent\IDName\HighIDNameTranslator:
+    class: Bungle\Framework\Ent\IDName\HighIDNameTranslator
     arguments: ["@bungle.id_name.chain_translator", "@cache.app"]
