'odm_json_encode' twig filter

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "mingyoung/dingtalk": "^2.3",
     "symfony/serializer": "^5.0",
     "symfony/property-info": "^5.0",
-    "symfony/property-access": "^5.0"
+    "symfony/property-access": "^5.0",
+    "ext-json": "*"
   },
   "autoload": {
     "psr-4": {
