--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "symfony/serializer": "^5.0",
     "symfony/property-info": "^5.0",
     "symfony/property-access": "^5.0",
-    "ext-json": "*"
+    "ext-json": "*",
+    "symfony/string": "^5.0"
   },
   "autoload": {
     "psr-4": {
