--- a/Dockerfiles/base-dev/Dockerfile
+++ b/Dockerfiles/base-dev/Dockerfile
@@ -1,16 +1,20 @@
-FROM archlinux
+FROM php:7.4.5-fpm-buster
 
-COPY mirrorlist /etc/pacman.d/
+COPY sources.list /etc/apt/sources.list
+RUN apt-get update && apt-get install -y libicu-dev
 
-RUN pacman -Syu --noconfirm
-RUN pacman -S --noconfirm composer nginx wget php-fpm php-intl community/xdebug unzip community/php-mongodb pacman-contrib && paccache -ruk0
-RUN sed -i 's/;extension=iconv/extension=iconv/; s/;extension=intl/extension=intl/; s/;zend_extension=opcache/zend_extension=opcache/; s/;opcache.enable=1/opcache.enable=1/; s/;opcache.revalidate_freq=2/;opcache.revalidate_freq=0/; s/; process.max = 128/process.max = 128/' /etc/php/php.ini
+RUN docker-php-ext-install intl && docker-php-ext-enable intl
+RUN docker-php-ext-enable opcache
+COPY disable-short-tag.ini $PHP_INI_DIR/conf.d/
 
 RUN groupadd -g 1000 work && useradd --uid 1000 --gid 1000 --create-home work
 
+COPY ./symfony-installer /tmp 
+COPY ./symfony_linux_amd64.gz /tmp
+RUN /tmp/symfony-installer
+
 USER work
-RUN wget https://get.symfony.com/cli/installer -O - | bash
-RUN composer config -g repo.packagist composer https://mirrors.aliyun.com/composer/
+COPY config.json /home/work/.config/composer
 
 ENV PATH=/home/work/.symfony/bin/:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 EXPOSE 8000
@@ -18,4 +22,4 @@ VOLUME /home/work/app
 VOLUME /home/work/.config
 WORKDIR /home/work/app
 ENTRYPOINT ["/home/work/app/bin/console"]
-CMD ["server:start"]
+CMD ["list"]
