Tweak php.ini of docker

--- a/Dockerfiles/base-dev/Dockerfile
+++ b/Dockerfiles/base-dev/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update && apt-get install -y libicu-dev
 
 RUN docker-php-ext-install intl && docker-php-ext-enable intl
 RUN docker-php-ext-enable opcache
-COPY disable-short-tag.ini $PHP_INI_DIR/conf.d/
+COPY my-php-tweak.ini $PHP_INI_DIR/conf.d/
 
 RUN groupadd -g 1000 work && useradd --uid 1000 --gid 1000 --create-home work
 
