--- a/BungleBundle/composer.json
+++ b/BungleBundle/composer.json
@@ -6,12 +6,11 @@
   "require": {
     "bungle/framework": "dev-master",
     "doctrine/annotations": "^1.8",
-    "beberlei/assert": "^3.2",
     "symfony/dependency-injection": "^5.0",
     "symfony/config": "^5.0",
     "symfony/workflow": "^5.0",
     "symfony/security-core": "^5.0",
-    "doctrine/mongodb-odm-bundle": "^4.1",
+    "doctrine/orm": "^2.7",
     "symfony/yaml": "^5.0"
   },
   "autoload": {
