--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,11 @@
     "friendsofphp/php-cs-fixer": "^2.16",
     "squizlabs/php_codesniffer": "^3.5",
     "phpmd/phpmd": "^2.8",
-    "mockery/mockery": "^1.3"
+    "mockery/mockery": "^1.3",
+    "phpstan/phpstan": "^0.12.31",
+    "phpstan/extension-installer": "^1.0",
+    "phpstan/phpstan-mockery": "^0.12.5",
+    "phpstan/phpstan-phpunit": "^0.12.11"
   },
   "require": {
     "doctrine/annotations": "^1.8",
