--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "phpstan/phpstan": "^0.12.31",
     "phpstan/extension-installer": "^1.0",
     "phpstan/phpstan-mockery": "^0.12.5",
-    "phpstan/phpstan-phpunit": "^0.12.11"
+    "phpstan/phpstan-phpunit": "^0.12.11",
+    "keboola/php-temp": "^2.0"
   },
   "require": {
     "doctrine/annotations": "^1.8",
