--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,6 @@
   "type": "library",
   "license": "MIT",
   "require-dev": {
-    "phpunit/phpunit": "^8.5",
     "friendsofphp/php-cs-fixer": "^2.16",
     "squizlabs/php_codesniffer": "^3.5",
     "phpmd/phpmd": "^2.8",
@@ -13,7 +12,8 @@
     "phpstan/extension-installer": "^1.0",
     "phpstan/phpstan-mockery": "^0.12.5",
     "phpstan/phpstan-phpunit": "^0.12.11",
-    "keboola/php-temp": "^2.0"
+    "keboola/php-temp": "^2.0",
+    "phpunit/phpunit": "9.*"
   },
   "require": {
     "doctrine/annotations": "^1.8",
