--- a/Dockerfiles/base-dev/Dockerfile
+++ b/Dockerfiles/base-dev/Dockerfile
@@ -1,10 +1,13 @@
 FROM php:7.4.5-fpm-buster
 
 COPY sources.list /etc/apt/sources.list
-RUN apt-get update && apt-get install -y libicu-dev
+RUN apt-get update && apt-get install -y libicu-dev zlib1g-dev libpng-dev libjpeg-dev libfreetype6-dev
 
+RUN docker-php-ext-configure gd --enable-gd --with-jpeg --with-freetype
+RUN docker-php-ext-install gd && docker-php-ext-enable gd
 RUN docker-php-ext-install intl && docker-php-ext-enable intl
 RUN docker-php-ext-enable opcache
+
 COPY my-php-tweak.ini $PHP_INI_DIR/conf.d/
 
 RUN groupadd -g 1000 work && useradd --uid 1000 --gid 1000 --create-home work
