--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "phpstan/phpstan-phpunit": "^0.12.11",
     "keboola/php-temp": "^2.0",
     "phpunit/phpunit": "^9.4",
-    "phpstan/phpstan-symfony": "^0.12.11"
+    "phpstan/phpstan-symfony": "^0.12.11",
+    "phpstan/phpstan-beberlei-assert": "^0.12.4"
   },
   "require": {
     "doctrine/annotations": "^1.8",
@@ -35,7 +36,8 @@
     "phpoffice/phpspreadsheet": "^1.14",
     "symfony/security-core": "^5.1",
     "symfony/uid": "^5.1",
-    "symfony/http-kernel": "^5.1"
+    "symfony/http-kernel": "^5.1",
+    "beberlei/assert": "^3.3"
   },
   "autoload": {
     "psr-4": {
